@@ -3,7 +3,7 @@
  * File: gfsmlabels_cmdparser.c
  * Description: Code for command-line parser struct gengetopt_args_info.
  *
- * File autogenerated by optgen.perl version 0.05
+ * File autogenerated by optgen.perl version 0.06
  * generated with the following command:
  * /usr/local/bin/optgen.perl -u -l --no-handle-rcfile --nopod -F gfsmlabels_cmdparser gfsmlabels.gog
  *
@@ -90,6 +90,9 @@ cmdline_parser_print_help (void)
   printf("   -h        --help           Print help and exit.\n");
   printf("   -V        --version        Print version and exit.\n");
   printf("   -lLABELS  --labels=LABELS  Specify input alphabet (labels) file.\n");
+  printf("   -a        --att-mode       Parse string(s) in AT&T-compatible mode.\n");
+  printf("   -m        --map-mode       Output original strings in addition to label vectors.\n");
+  printf("   -q        --quiet          Suppress warnings about undefined symbols.\n");
   printf("   -oFILE    --output=FILE    Specifiy output file (default=stdout).\n");
 }
 
@@ -112,6 +115,9 @@ static void
 clear_args(struct gengetopt_args_info *args_info)
 {
   args_info->labels_arg = NULL; 
+  args_info->att_mode_flag = 0; 
+  args_info->map_mode_flag = 0; 
+  args_info->quiet_flag = 0; 
   args_info->output_arg = strdup("-"); 
 }
 
@@ -125,6 +131,9 @@ cmdline_parser (int argc, char * const *argv, struct gengetopt_args_info *args_i
   args_info->help_given = 0;
   args_info->version_given = 0;
   args_info->labels_given = 0;
+  args_info->att_mode_given = 0;
+  args_info->map_mode_given = 0;
+  args_info->quiet_given = 0;
   args_info->output_given = 0;
 
   clear_args(args_info);
@@ -145,6 +154,9 @@ cmdline_parser (int argc, char * const *argv, struct gengetopt_args_info *args_i
 	{ "help", 0, NULL, 'h' },
 	{ "version", 0, NULL, 'V' },
 	{ "labels", 1, NULL, 'l' },
+	{ "att-mode", 0, NULL, 'a' },
+	{ "map-mode", 0, NULL, 'm' },
+	{ "quiet", 0, NULL, 'q' },
 	{ "output", 1, NULL, 'o' },
         { NULL,	0, NULL, 0 }
       };
@@ -152,6 +164,9 @@ cmdline_parser (int argc, char * const *argv, struct gengetopt_args_info *args_i
 	'h',
 	'V',
 	'l', ':',
+	'a',
+	'm',
+	'q',
 	'o', ':',
 	'\0'
       };
@@ -225,6 +240,33 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
           args_info->labels_arg = strdup(val);
           break;
         
+        case 'a':	 /* Parse string(s) in AT&T-compatible mode. */
+          if (args_info->att_mode_given) {
+            fprintf(stderr, "%s: `--att-mode' (`-a') option given more than once\n", PROGRAM);
+          }
+          args_info->att_mode_given++;
+         if (args_info->att_mode_given <= 1)
+           args_info->att_mode_flag = !(args_info->att_mode_flag);
+          break;
+        
+        case 'm':	 /* Output original strings in addition to label vectors. */
+          if (args_info->map_mode_given) {
+            fprintf(stderr, "%s: `--map-mode' (`-m') option given more than once\n", PROGRAM);
+          }
+          args_info->map_mode_given++;
+         if (args_info->map_mode_given <= 1)
+           args_info->map_mode_flag = !(args_info->map_mode_flag);
+          break;
+        
+        case 'q':	 /* Suppress warnings about undefined symbols. */
+          if (args_info->quiet_given) {
+            fprintf(stderr, "%s: `--quiet' (`-q') option given more than once\n", PROGRAM);
+          }
+          args_info->quiet_given++;
+         if (args_info->quiet_given <= 1)
+           args_info->quiet_flag = !(args_info->quiet_flag);
+          break;
+        
         case 'o':	 /* Specifiy output file (default=stdout). */
           if (args_info->output_given) {
             fprintf(stderr, "%s: `--output' (`-o') option given more than once\n", PROGRAM);
@@ -265,6 +307,36 @@ cmdline_parser_parse_option(char oshort, const char *olong, const char *val,
             args_info->labels_given++;
             if (args_info->labels_arg) free(args_info->labels_arg);
             args_info->labels_arg = strdup(val);
+          }
+          
+          /* Parse string(s) in AT&T-compatible mode. */
+          else if (strcmp(olong, "att-mode") == 0) {
+            if (args_info->att_mode_given) {
+              fprintf(stderr, "%s: `--att-mode' (`-a') option given more than once\n", PROGRAM);
+            }
+            args_info->att_mode_given++;
+           if (args_info->att_mode_given <= 1)
+             args_info->att_mode_flag = !(args_info->att_mode_flag);
+          }
+          
+          /* Output original strings in addition to label vectors. */
+          else if (strcmp(olong, "map-mode") == 0) {
+            if (args_info->map_mode_given) {
+              fprintf(stderr, "%s: `--map-mode' (`-m') option given more than once\n", PROGRAM);
+            }
+            args_info->map_mode_given++;
+           if (args_info->map_mode_given <= 1)
+             args_info->map_mode_flag = !(args_info->map_mode_flag);
+          }
+          
+          /* Suppress warnings about undefined symbols. */
+          else if (strcmp(olong, "quiet") == 0) {
+            if (args_info->quiet_given) {
+              fprintf(stderr, "%s: `--quiet' (`-q') option given more than once\n", PROGRAM);
+            }
+            args_info->quiet_given++;
+           if (args_info->quiet_given <= 1)
+             args_info->quiet_flag = !(args_info->quiet_flag);
           }
           
           /* Specifiy output file (default=stdout). */
