@@ -3,7 +3,7 @@
  * File: gfsmlabels_cmdparser.h
  * Description: Headers for command-line parser struct gengetopt_args_info.
  *
- * File autogenerated by optgen.perl version 0.05.
+ * File autogenerated by optgen.perl version 0.06.
  *
  */
 
@@ -20,11 +20,17 @@ extern "C" {
 
 struct gengetopt_args_info {
   char * labels_arg;	 /* Specify input alphabet (labels) file. (default=NULL). */
+  int att_mode_flag;	 /* Parse string(s) in AT&T-compatible mode. (default=0). */
+  int map_mode_flag;	 /* Output original strings in addition to label vectors. (default=0). */
+  int quiet_flag;	 /* Suppress warnings about undefined symbols. (default=0). */
   char * output_arg;	 /* Specifiy output file (default=stdout). (default=-). */
 
   int help_given;	 /* Whether help was given */
   int version_given;	 /* Whether version was given */
   int labels_given;	 /* Whether labels was given */
+  int att_mode_given;	 /* Whether att-mode was given */
+  int map_mode_given;	 /* Whether map-mode was given */
+  int quiet_given;	 /* Whether quiet was given */
   int output_given;	 /* Whether output was given */
   
   char **inputs;         /* unnamed arguments */
